monitoria/mac323/5-3-24/grades/Felipe-Caetano-Silva_201305_assignsubmission_file_FindAll.txt
[-10] Errou a assinatura de findAll em KMP

LOG DE COMPILAÇÃO E TESTE
Existem dois métodos de compilação, eles estão indicados, se um falha eu parto pro outro. Então se quiser entender o porque não compilou, verifique todos.
Segue também o log do corretor, pode ser interessante para descobrir a natureza de seus erros. A saída está trucada (não mostra todas as linha), se quiser ver todo o log, fale comigo

CC......
EP: Felipe-Caetano-Silva_201305_assignsubmission_file_FindAll
NOTA: 50
CORREÇÃO AUTOMÁTICA
600 Pontos (máximo: 1600, dos quais 400 são bônus)
0 Testes com Falha no corretor (avise o monitor)
2 Testes com Erro de Compilação (incui o bônus)

make: '/home/bcc/victorsenam/private/usp/monitoria/mac323/5-3-24/tester/checker/checker' is up to date.
======= Booyer_006 ============
BooyerDoVictor.java:10: error: cannot find symbol
            for (int i : ex.findAll(StdIn.readString()))
                           ^
  symbol:   method findAll(String)
  location: variable ex of type BoyerMoore
1 error
Compilation Error on Booyer
======= Booyer_007 ============
BooyerDoVictor.java:10: error: cannot find symbol
            for (int i : ex.findAll(StdIn.readString()))
                           ^
  symbol:   method findAll(String)
  location: variable ex of type BoyerMoore
1 error
Compilation Error on Booyer
======= Brute_003 ============

real	0m0.183s
user	0m0.232s
sys	0m0.024s
partially correct (200) perfeito
======= Brute_004 ============

real	0m0.162s
user	0m0.180s
sys	0m0.032s
partially correct (200) perfeito
======= Brute_005 ============

real	0m0.169s
user	0m0.220s
sys	0m0.016s
partially correct (200) perfeito
======= KMP_000 ============
./KMP.java:135: error: cannot find symbol
        int M = pattern.length();
                       ^
  symbol:   method length()
  location: variable pattern of type char[]
./KMP.java:159: error: method findAll in class KMP cannot be applied to given types;
        Iterable<Integer> iterate = kmp1.findAll(txt, pat);
                                        ^
  required: String
  found: String,String
  reason: actual and formal argument lists differ in length
2 errors
Exception in thread "main" java.lang.NoSuchMethodError: KMP.findAll(Ljava/lang/String;)Ljava/lang/Iterable;
	at KMPDoVictor.main(KMPDoVictor.java:10)

real	0m0.135s
user	0m0.140s
sys	0m0.016s
partially correct (0) 0 linhas certas de 200. primeiro erro:
======= KMP_001 ============
./KMP.java:135: error: cannot find symbol
        int M = pattern.length();
                       ^
  symbol:   method length()
  location: variable pattern of type char[]
./KMP.java:159: error: method findAll in class KMP cannot be applied to given types;
        Iterable<Integer> iterate = kmp1.findAll(txt, pat);
                                        ^
  required: String
  found: String,String
  reason: actual and formal argument lists differ in length
2 errors
Exception in thread "main" java.lang.NoSuchMethodError: KMP.findAll(Ljava/lang/String;)Ljava/lang/Iterable;
	at KMPDoVictor.main(KMPDoVictor.java:10)

real	0m0.129s
user	0m0.124s
sys	0m0.024s
partially correct (0) 0 linhas certas de 200. primeiro erro:
======= KMP_002 ============
./KMP.java:135: error: cannot find symbol
        int M = pattern.length();
                       ^
  symbol:   method length()
  location: variable pattern of type char[]
./KMP.java:159: error: method findAll in class KMP cannot be applied to given types;
        Iterable<Integer> iterate = kmp1.findAll(txt, pat);
                                        ^
  required: String
  found: String,String
  reason: actual and formal argument lists differ in length
2 errors
Exception in thread "main" java.lang.NoSuchMethodError: KMP.findAll(Ljava/lang/String;)Ljava/lang/Iterable;
	at KMPDoVictor.main(KMPDoVictor.java:10)

real	0m0.134s
user	0m0.104s
sys	0m0.048s
partially correct (0) 0 linhas certas de 200. primeiro erro:
